# kdevelop-psp-template

./: CMakeLists.txt  README.md  install.sh  psp-makefile.kdevtemplate  template-psp-makefile.kdev4
include/: Tools.h
required/: exports.exp  makefile_psp
src/: lib_UI.cpp
template-psp-makefile/: %{PROJECTDIRNAME}.kdevtemplate  makefile  template-psp-makefile.kdevtemplate
template-psp-makefile/include/: MiniC.h  PLUGIN__%{APPNAMELC}.h  PRX.h  ThreadInfo.h  UI.h
template-psp-makefile/required/: gen_makefile.sh
template-psp-makefile/src/: PLUGIN__%{APPNAMELC}.cpp  lib_MiniC.cpp  lib_PRX.cpp  lib_Tools.cpp  prx_bootstrap.cpp
